--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -9,6 +9,15 @@ layout: default
 
   {{ content }}
 
+  {% raw %}
+  {% include code_snippet.html code='
+  def hello_world():
+      print("Hello, World!")
+
+  hello_world()
+  ' lang='python' %}
+  {% endraw %}
+
   {%- if site.posts.size > 0 -%}
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
