--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {% raw %}
-  {% include code_snippet.html code='
+  {% include code.html code='
   def hello_world():
       print("Hello, World!")
 
