--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -9,6 +9,6 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
   <script type="text/javascript"
-    src="https://d3eoax9i5htok0.cloudfront.net/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 </head>
