--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -12,7 +12,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     MathJax = {
       tex: {
-        inlineMath: [['$', '$']],
+        inlineMath: [['$', '$'], ['\\(', '\\)']],
         displayMath: [['$$','$$']],
       }
     };
