--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -10,9 +10,9 @@ layout: default
   {{ content }}
 
   <h2 class="post-list-heading">Books</h2>
-  <table border="0" cellspacing="0" cellpadding="0">
+  <table style="border-collapse: collapse; width: 100%" cellspacing="0" cellpadding="0">
     <tr>
-      <td rowspan="2">
+      <td rowspan="2" style="max-width: 50%;">
         <img src="/assets/images/Optimising_the_Training_Loop/1.png" style="border-radius: 50%; width: 150px; height: 150px;" />
       </td>
       <td>sfg</td>
