--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -16,8 +16,8 @@ layout: default
   <h2 class="post-list-heading">Books</h2>
   <div class="col-sm-6 col-md-4">
     <img
-      src="/assets/images/Optimising_the_Training_Loop/1.png"
-      style="border-radius: 50%; width: 150px; height: 150px"
+      src="/assets/images/book.png"
+      style="width: 150px;"
     />
   </div>
   <div class="col-sm-6 col-md-8">
