--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -3,35 +3,21 @@ layout: default
 ---
 
 <div class="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <img
-          src="/assets/images/pp.jpg"
-          style="border-radius: 50%; width: 150px; height: 150px"
-        />
-      </div>
-      <div class="col-sm-6 col-md-8">
-        <div>
-          Welcome to my personal website. I currently work as a senior applied
-          scientist at Microsoft where I build AI features for Microsoft
-          Designer.
-        </div>
-      </div>
+  <div class="flex-container">
+    <div>
+      <img
+        src="/assets/images/pp.jpg"
+        style="border-radius: 50%; width: 150px; height: 150px"
+      />
     </div>
+    <div>2</div>
   </div>
-
   <h2 class="post-list-heading">Books</h2>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <img src="/assets/images/book.png" style="width: 150px" />
-      </div>
-      <div class="col-sm-6 col-md-8">
-        <div></div>
-        <div></div>
-      </div>
+  <div class="flex-container">
+    <div>
+      <img src="/assets/images/book.png" style="width: 150px" />
     </div>
+    <div>2</div>
   </div>
 
   {%- if site.posts.size > 0 -%}
