--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
   <div class="flex-container">
-    <div>
+    <div style="margin-right: 50px;">
       <img
         src="/assets/images/pp.jpg"
         style="border-radius: 50%; width: 150px; height: 150px"
@@ -14,10 +14,10 @@ layout: default
   </div>
   <h2 class="post-list-heading">Books</h2>
   <div class="flex-container">
-    <div>
+    <div style="margin-right: 50px;">
       <img src="/assets/images/book.png" style="width: 150px" />
     </div>
-    <div>2</div>
+    <div>Eight brief, jargon-free lessons for a strong computer science foundation</div>
   </div>
 
   {%- if site.posts.size > 0 -%}
