--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
     </div>
     <div>2</div>
   </div>
-  <h2 class="post-list-heading">Books</h2>
+  <h2 class="post-list-heading" style="margin-top: 50px;">Books</h2>
   <div class="flex-container">
     <div style="margin-right: 30px;">
       <img src="/assets/images/book.png" style="width: 150px" />
@@ -21,7 +21,7 @@ layout: default
   </div>
 
   {%- if site.posts.size > 0 -%}
-  <h2 class="post-list-heading">
+  <h2 class="post-list-heading" style="margin-top: 50px;">
     {{ page.list_title | default: "Blog Posts" }}
   </h2>
   <ul class="post-list">
