--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
         style="border-radius: 50%; width: 150px; height: 150px"
       />
     </div>
-    <div>2</div>
+    <div>Welcome to my personal website. I currently work as a senior applied scientist at Microsoft where I build AI features for Microsoft Designer.</div>
   </div>
   <h2 class="post-list-heading" style="margin-top: 50px;">Books</h2>
   <div class="flex-container">
