--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -8,3 +8,53 @@
     display: flex;
     flex-direction: row;
 }
+
+/* CSS */
+.action-button {
+    background-color: transparent;
+    border: 1px solid #266DB6;
+    box-sizing: border-box;
+    color: #00132C;
+    font-family: "Avenir Next LT W01 Bold",sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    padding: 16px 23px;
+    position: relative;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .action-button:hover,
+  .action-button:active {
+    outline: 0;
+  }
+  
+  .action-button:hover {
+    background-color: transparent;
+    cursor: pointer;
+  }
+  
+  .action-button:before {
+    background-color: #D5EDF6;
+    content: "";
+    height: calc(100% + 3px);
+    position: absolute;
+    right: -7px;
+    top: -9px;
+    transition: background-color 300ms ease-in;
+    width: 100%;
+    z-index: -1;
+  }
+  
+  .action-button:hover:before {
+    background-color: #6DCFF6;
+  }
+  
+  @media (min-width: 768px) {
+    .action-button {
+      padding: 16px 32px;
+    }
+  }
