--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
   <div class="flex-container">
-    <div style="margin-right: 30px">
+    <div style="margin-right: 30px; min-width: 150px;">
       <img
         src="/assets/images/pp.jpg"
         style="border-radius: 50%; width: 150px; height: 150px"
@@ -17,13 +17,17 @@ layout: default
   </div>
   <h2 class="post-list-heading" style="margin-top: 50px">Books</h2>
   <div class="flex-container">
-    <div style="margin-right: 30px">
+    <div style="margin-right: 30px; min-width: 150px;">
       <img src="/assets/images/book.png" style="width: 150px" />
     </div>
     <div>
-      Eight brief, jargon-free lessons for a strong computer science foundation
+      <div>
+        Eight brief, jargon-free lessons for a strong computer science
+        foundation
+      </div>
+      <br />
+      <button class="action-button" role="button">Button 51</button>
     </div>
-    <button class="action-button" role="button">Button 51</button>
   </div>
 
   {%- if site.posts.size > 0 -%}
