--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -26,8 +26,7 @@
   text-align: center;
   text-decoration: none #000000 solid;
   text-decoration-thickness: auto;
-  width: 100%;
-  max-width: 460px;
+  width: 300px;
   position: relative;
   cursor: pointer;
   transform: rotate(-2deg);
