--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
         foundation
       </div>
       <br />
-      <button class="action-button" role="button">Button 51</button>
+      <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">Buy on Amazon for $2.99</button>
     </div>
   </div>
 
