--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -11,7 +11,7 @@
 
 /* CSS */
 .action-button {
-  background-color: #3DD1E7;
+  background-color: #a2cef4;
   border: 0 solid #E5E7EB;
   box-sizing: border-box;
   color: #000000;
@@ -26,7 +26,7 @@
   text-align: center;
   text-decoration: none #000000 solid;
   text-decoration-thickness: auto;
-  width: 300px;
+  width: 200px;
   position: relative;
   cursor: pointer;
   transform: rotate(-2deg);
