--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
     <div>
       <div>
         Eight brief, jargon-free lessons for a strong computer science
-        foundation
+        foundation. Understand Everything - From Hardware to AI!
       </div>
       <br />
       <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">Buy on Amazon for $2.99</button>
