--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
   <div class="flex-container">
-    <div style="margin-right: 30px; min-width: 100px;">
+    <div style="margin-right: 30px; min-width: 100px">
       <img
         src="/assets/images/pp.jpg"
         style="border-radius: 50%; width: 100px; height: 100px"
@@ -17,7 +17,7 @@ layout: default
   </div>
   <h2 class="post-list-heading" style="margin-top: 30px">Books</h2>
   <div class="flex-container">
-    <div style="margin-right: 30px; min-width: 100px;">
+    <div style="margin-right: 30px; min-width: 100px">
       <img src="/assets/images/book.png" style="width: 100px" />
     </div>
     <div>
@@ -26,7 +26,13 @@ layout: default
         foundation. Understand Everything - From Hardware to AI!
       </div>
       <br />
-      <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">Buy on Amazon for $2.99</button>
+      <button
+        class="action-button"
+        role="button"
+        onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')"
+      >
+        Buy on Amazon for $2.99
+      </button>
     </div>
   </div>
 
@@ -35,6 +41,16 @@ layout: default
     {{ page.list_title | default: "Blog Posts" }}
   </h2>
   <ul class="post-list">
+    {% for category in site.categories %}
+    <li>
+      <a name="{{ category | first }}">{{ category | first }}</a>
+      <ul>
+        {% for post in category.last %}
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </li>
+    {% endfor %} 
     {%- for post in site.posts -%}
     <li>
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y"
