--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -40,31 +40,30 @@ layout: default
   <h2 class="post-list-heading" style="margin-top: 30px">
     {{ page.list_title | default: "Blog Posts" }}
   </h2>
-  <ul class="post-list">
-    {% for category in site.categories %}
-    <li>
+
+  {% for category in site.categories %}
+  <div class="flex-container">
+    <div style="margin-right: 30px; min-width: 100px">
       <a name="{{ category | first }}">{{ category | first }}</a>
-      <ul>
-        {% for post in category.last %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
+    </div>
+    <div>
+      <ul class="post-list">
+        {%- for post in category.last -%}
+        <li>
+          {%- assign date_format = site.minima.date_format | default: "%b %-d,
+          %Y" -%}
+          <span class="post-meta">{{ post.date | date: date_format }}</span>
+          <h3>
+            <a class="post-link" href="{{ post.url | relative_url }}">
+              {{ post.title | escape }}
+            </a>
+          </h3>
+          {%- if site.show_excerpts -%} {{ post.excerpt }} {%- endif -%}
+        </li>
+        {%- endfor -%}
       </ul>
-    </li>
-    {% endfor %} 
-    {%- for post in site.posts -%}
-    <li>
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y"
-      -%}
-      <span class="post-meta">{{ post.date | date: date_format }}</span>
-      <h3>
-        <a class="post-link" href="{{ post.url | relative_url }}">
-          {{ post.title | escape }}
-        </a>
-      </h3>
-      {%- if site.show_excerpts -%} {{ post.excerpt }} {%- endif -%}
-    </li>
-    {%- endfor -%}
-  </ul>
+    </div>
+  </div>
 
   {%- endif -%}
 </div>
