--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -48,9 +48,9 @@ layout: default
     </div>
     <div>
       <ul class="post-list">
-        {%- for post in category.last -%}
+        {%- for post in category.last | sort: "title" -%}
         <li>
-          <span class="post-meta">{{ post.date }}</span>
+          <span class="post-meta">{{ post.posted }}</span>
           <h3>
             <a class="post-link" href="{{ post.url | relative_url }}">
               {{ post.title | escape }}
