--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -44,7 +44,7 @@ layout: default
   {% for category in site.categories %}
   <div class="flex-container">
     <div style="margin-right: 30px; min-width: 100px">
-      <a name="{{ category | first }}">{{ category | first | replace: "-"," " }} Series</a>
+      <h3>{{ category | first | replace: "-"," " }} Series</h3>
     </div>
     <div>
       <ul class="post-list">
