--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -11,8 +11,7 @@ layout: default
       />
     </div>
     <div>
-      Welcome to my personal website. I currently work as a senior applied
-      scientist at Microsoft where I build AI features for Microsoft Designer.
+      Welcome to my personal website. I currently work at Microsoft building AI features for [Microsoft Designer](https://designer.microsoft.com).
     </div>
   </div>
   <h2 class="post-list-heading" style="margin-top: 30px">Books</h2>
