--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -51,7 +51,7 @@ layout: default
         <li>
           <span class="post-meta">{{ post.posted }}</span>
           <h3>
-            {%- if post.live = true -%}
+            {%- if post.live == true -%}
             <a class="post-link" href="{{ post.url | relative_url }}">
               {{ post.title | escape }}
             </a>
