--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
       />
     </div>
     <div>
-      Welcome to my personal website. I currently work at Microsoft building AI features for [Microsoft Designer](https://designer.microsoft.com).
+      Welcome to my personal website. I currently work at Microsoft building AI features for <a href="https://designer.microsoft.com" target="_blank">Microsoft Designer</a>.
     </div>
   </div>
   <h2 class="post-list-heading" style="margin-top: 30px">Books</h2>
