--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -57,7 +57,7 @@ layout: default
               {{ post.title | escape }}
             </a>
             {%- else -%}
-            <a class="post-link" href="" disabled>
+            <a class="post-link disabled" href="">
               {{ post.title | escape }}
             </a>
             {%- endif -%}
