--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -4,6 +4,11 @@
 
 @import "minima";
 
+.callout {
+  background-color: #a2cef4;
+  padding: 15px;
+}
+
 .flex-container {
     display: flex;
     flex-direction: row;
