--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -5,7 +5,7 @@
 @import "minima";
 
 .callout {
-  background-color: #a2cef4;
+  background-color: #cee7fc;
   padding: 15px;
   margin-bottom: 15px;
 }
