--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -42,7 +42,7 @@ layout: default
 
   {% for category in site.categories %}
   <div class="flex-container">
-    <div style="margin-right: 30px; min-width: 100px">
+    <div style="margin-right: 30px; min-width: 100px ; max-width: 200px">
       <h3>{{ category | first | replace: "-"," " }} Series</h3>
     </div>
     <div>
@@ -62,7 +62,7 @@ layout: default
             </a>
             {%- endif -%}
           </h3>
-          {%- if site.show_excerpts -%} {{ post.excerpt | truncate(50)  }} {%- endif -%}
+          {%- if site.show_excerpts -%} {{ post.excerpt | truncate(150)  }} {%- endif -%}
         </li>
         {%- endfor -%}
       </ul>
