--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -22,51 +22,13 @@ a.disabled {
 
 /* CSS */
 .action-button {
-  background-color: #a2cef4;
-  border: 0 solid #E5E7EB;
-  box-sizing: border-box;
-  color: #000000;
-  display: flex;
-  font-size: 14px;
-  justify-content: center;
-  line-height: 1.15rem;
-  padding: .75rem 1.65rem;
-  position: relative;
+  background-color: #cee7fc; /* Green */
+  border: none;
+  border-radius: 30%;
+  color: #000;
+  padding: 15px 32px;
   text-align: center;
-  text-decoration: none #000000 solid;
-  text-decoration-thickness: auto;
-  width: 200px;
-  position: relative;
-  cursor: pointer;
-  transform: rotate(-2deg);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.action-button:focus {
-  outline: 0;
-}
-
-.action-button:after {
-  content: '';
-  position: absolute;
-  border: 1px solid #000000;
-  bottom: 4px;
-  left: 4px;
-  width: calc(100% - 1px);
-  height: calc(100% - 1px);
-}
-
-.action-button:hover:after {
-  bottom: 2px;
-  left: 2px;
-}
-
-@media (min-width: 768px) {
-  .action-button {
-    padding: .75rem 3rem;
-    font-size: 14px;
-    max-width: 90%;
-  }
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
