--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -23,12 +23,13 @@ a.disabled {
 /* CSS */
 .action-button {
   background-color: #cee7fc; /* Green */
-  border: none;
-  border-radius: 30%;
+  border: 1px solid #000;
+  border-radius: 50px;
   color: #000;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  cursor: pointer;
 }
