--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -14,8 +14,8 @@ layout: default
   </div>
   <h2 class="post-list-heading" style="margin-top: 30px">Books</h2>
   <div class="flex-container">
-    <div style="margin-right: 30px; min-width: 100px">
-      <img src="/assets/images/book.png" style="width: 100px" />
+    <div style="margin-right: 30px; min-width: 100px;">
+      <img src="/assets/images/book.png" style="width: 80%" />
     </div>
     <div>
       <div>
