--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -22,8 +22,9 @@ layout: default
         Eight brief, jargon-free lessons for a strong computer science
         foundation.
         <br />
-        How does an inanimate machine, essentially a rock, understand our commands? How do billions of such machines
-        seamlessly communicate with each other? And they are achieving human-like intelligence? Understand the internal
+        <br />
+        <i>How does an inanimate machine, essentially a rock, understand our commands? How do billions of such machines
+        seamlessly communicate with each other? And they are achieving human-like intelligence?</i> Understand the internal
         workings of everything - from computer hardware to AI!
       </div>
       <br />
