added google verification

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -23,6 +23,7 @@
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
+  <meta name="google-site-verification" content="fcctivZ_iPLCQjYlMXxW-kHTi4iT1PgaYLtsa5pDdOg" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1P7RCDVVH7"></script>
   <script>
