--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -27,6 +27,7 @@ layout: default
         seamlessly communicate with each other? And they are achieving human-like intelligence?</i> Understand the internal
         workings of everything - from computer hardware to AI!
       </div>
+      <a href="https://bookraid.com/categories/24/general-non-fiction" target="_blank" rel="noopener"><img width="100px" height="100px" src="https://bookraid.com/badges/general_non_fiction.png" alt="General Non-Fiction Bestseller on BookRaid" /></a>
       <br />
       <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">
         Buy on Amazon for $2.99
