--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -16,6 +16,7 @@ layout: default
   <div class="flex-container">
     <div style="margin-right: 30px; min-width: 100px;">
       <img src="/assets/images/book.png" style="width: 80%" />
+      <a style="position: absolute;top: 0;right: 0" href="https://bookraid.com/categories/24/general-non-fiction" target="_blank" rel="noopener"><img width="100px" height="100px" src="https://bookraid.com/badges/general_non_fiction.png" alt="General Non-Fiction Bestseller on BookRaid" /></a>
     </div>
     <div>
       <div>
@@ -27,7 +28,6 @@ layout: default
         seamlessly communicate with each other? And they are achieving human-like intelligence?</i> Understand the internal
         workings of everything - from computer hardware to AI!
       </div>
-      <a href="https://bookraid.com/categories/24/general-non-fiction" target="_blank" rel="noopener"><img width="100px" height="100px" src="https://bookraid.com/badges/general_non_fiction.png" alt="General Non-Fiction Bestseller on BookRaid" /></a>
       <br />
       <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">
         Buy on Amazon for $2.99
