--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -16,7 +16,6 @@ layout: default
   <div class="flex-container">
     <div style="margin-right: 30px; min-width: 100px;">
       <img src="/assets/images/book.png" style="width: 80%" />
-      <a style="position: absolute;top: 0;right: 0" href="https://bookraid.com/categories/24/general-non-fiction" target="_blank" rel="noopener"><img width="100px" height="100px" src="https://bookraid.com/badges/general_non_fiction.png" alt="General Non-Fiction Bestseller on BookRaid" /></a>
     </div>
     <div>
       <div>
@@ -29,9 +28,12 @@ layout: default
         workings of everything - from computer hardware to AI!
       </div>
       <br />
-      <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">
-        Buy on Amazon for $2.99
-      </button>
+      <div class="flex-container">
+        <div><a href="https://bookraid.com/categories/24/general-non-fiction" target="_blank" rel="noopener"><img width="80px" height="80px" src="https://bookraid.com/badges/general_non_fiction.png" alt="General Non-Fiction Bestseller on BookRaid" /></a></div>
+        <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">
+          Buy on Amazon for $2.99
+        </button>
+      </div>
     </div>
   </div>
 
