--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
       </div>
       <br />
       <div class="flex-container">
-        <div><a href="https://bookraid.com/categories/24/general-non-fiction" target="_blank" rel="noopener"><img width="80px" height="80px" src="https://bookraid.com/badges/general_non_fiction.png" alt="General Non-Fiction Bestseller on BookRaid" /></a></div>
+        <div style="margin-right: 20px"><a href="https://bookraid.com/categories/24/general-non-fiction" target="_blank" rel="noopener"><img width="80px" height="80px" src="https://bookraid.com/badges/general_non_fiction.png" alt="General Non-Fiction Bestseller on BookRaid" /></a></div>
         <button class="action-button" role="button" onclick="window.open('https://amazon.com/dp/B0D2RZJCN8','_blank')">
           Buy on Amazon for $2.99
         </button>
